2009-03-03  Alexander Larsson  <alexl@redhat.com>

	Bug 562613 – Missing const modifier in string parameters

        * gfileinputstream.[ch]:
        * gfileoutputstream.[ch]:
        * glocalfileinfo.[ch]:
	Make string arguments const if used as such.

2009-03-03  Alexander Larsson  <alexl@redhat.com>

	* glocalfile.c (g_local_file_query_filesystem_info):
	Handle filesystems no supporting reporting how much is free.
	This fixes bug 573454 where the filesystem not supporting this
	is the gvfs smb backend over the fuse filesystem.

2009-03-02  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.19.10 ===

2009-03-02  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.19.9 ===

2009-03-02  Matthias Clasen  <mclasen@redhat.com>

	* gioenums.h: Add a Since: tag

2009-03-01  Matthias Clasen  <mclasen@redhat.com>

	Bug 573658 – Deadlock in giomodule.c

	* giomodule.c: Use a separate lock for extension point registration
	to avoid deadlock. Discovered by Torsten Schoenfeld

2009-03-01  Matthias Clasen  <mclasen@redhat.com>

	* gdatainputstream.c: Fix docs

2009-02-27  Matthias Clasen  <mclasen@redhat.com>

	Bug 573421 – Clarify message format in GMountOperation

	* gmountoperation.c: Document that the first line of a
	multi-line message should be interpreted as a heading.

2009-02-27  David Zeuthen  <davidz@redhat.com>

	Bug 573462 – GEmblemedIcon leak

	* gemblemedicon.c (g_emblemed_icon_finalize):
	Avoid leaking a GList.

2009-02-27  Alexander Larsson  <alexl@redhat.com>

        * giomodule-priv.h:
        * giomodule.c:
	Split out the extension point registration code to its
	own function.

        * glocalvfs.c:
	Ensure extension points are registered before extending it.
	It might not have happened yet if g_vfs_get_local() is called.

2009-02-26  Alexander Larsson  <alexl@redhat.com>

	Bug 540461 – g_memory_output_stream_get_data_size() doesn't behave as document
        * gmemoryoutputstream.c:
	Track actual valid size, even if we later seek back.
